Fixed navbar not showing up.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -133,10 +133,8 @@ body {
   /* Show the navbar when the screen size matches the media query */
 
   /* Hide the sidebar when the screen size matches the media query */
-  .navbar {
-    display: none;
-  }
-  .SBbuttons{
+  
+  .navbuttons{
     background-color: #EDF2F4;
     border: 2px solid #2B2D42;
     border-radius: 0px;
@@ -161,7 +159,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .SBbuttons{
+  .navbuttons{
     background-color: #EDF2F4;
     border: 2px solid #2B2D42;
     border-radius: 0px;
